# cargo-service-message

./: .gitignore  Cargo.toml  README.md
examples/tests/: Cargo.toml
examples/tests/src/: lib.rs  main.rs
src/: lib.rs  main.rs
